--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/P3ntest/r6d-web#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "pigpio": "^3.0.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
