--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "r6d-web",
   "version": "1.0.0",
   "description": "",
-  "main": "cctv.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
