add npm package

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/P3ntest/r6d-web#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "pigpio": "^3.0.0",
     "python-bridge": "^1.1.0",
     "raspivid-stream": "^0.2.1",
